infrastructure/argocd/chart/templates/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: websecure
      namespace: gateway

  hostnames:
    - argo.wieman.cloud
    
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
